--- a/templates/getdatacredit.html
+++ b/templates/getdatacredit.html
@@ -24,7 +24,7 @@
 
         <div class="form-container">
 
-            <form action="/getcredit" method="post">
+            <form action="/credit" method="post">
 
                 <label for="card_id">Card ID:</label>
 
