--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="menu">
             <a href="/input" class="menu-button">Input Data Credit Card</a>
             <a href="/display_all" class="menu-button">Show All Credit Card</a>
-            <a href="/credit" class="menu-button">Credit Card Detail</a>
+            <a href="/creditcard" class="menu-button">Credit Card Detail</a>
             <a href="/updatedata" class="menu-button">Update Data Credit Card</a>
             <a href="/delete_credit_card" class="menu-button">Delete Data Credit Card</a>
         </div>
