--- a/templates/createdatacredit.html
+++ b/templates/createdatacredit.html
@@ -18,8 +18,8 @@
                 <label for="customer_id">Customer ID:</label>
                 <input type="text" name="customer_id" id="customer_id" placeholder="Masukkan custome ID" required>
                 <br>
-                <label for="limit">Limit:</label>
-                <input type="text" name="limit" id="limit" placeholder="Masukkan limit" required>
+                <label for="limitt">Limit:</label>
+                <input type="text" name="limitt" id="limitt" placeholder="Masukkan limitt" required>
                 <br>
                 <label for="balance">Balance:</label>
                 <input type="text" name="balance" id="balance" placeholder="Masukkan balance" required>
