--- a/templates/creditdata.html
+++ b/templates/creditdata.html
@@ -54,7 +54,7 @@
                 <tr>
                     <td>{{ data.card_id }}</td>
                     <td>{{ data.customer_id }}</td>
-                    <td>{{ data.limit }}</td>
+                    <td>{{ data.limitt }}</td>
                     <td>{{ data.balance }}</td>
                     <td>{{ data.interest_rate }}</td>
                 </tr>
