--- a/templates/deletedatacredit.html
+++ b/templates/deletedatacredit.html
@@ -37,7 +37,7 @@
                 <tr>
                     <td>{{item.card_id}}</td>
                     <td>{{item.customer_id}}</td>
-                    <td>{{item.limit}}</td>
+                    <td>{{item.limitt}}</td>
                     <td>{{item.balance}}</td>
                     <td>{{item.interest_rate}}</td>
                     <td>
