--- a/templates/displaycredit.html
+++ b/templates/displaycredit.html
@@ -28,7 +28,7 @@
                 <tr>
                     <td>{{ credit_card.card_id }}</td>
                     <td>{{ credit_card.customer_id }}</td>
-                    <td>{{ credit_card.limit }}</td>
+                    <td>{{ credit_card.limitt }}</td>
                     <td>{{ credit_card.balance }}</td>
                     <td>{{ credit_card.interest_rate }}</td>
                 </tr>
